--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   "homepage": "https://github.com/d-lukutin/aamvajs",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
-    "prepare": "./node_modules/.bin/tsc"
+    "prepare": "./node_modules/.bin/tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.11.17",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   }
